More layout adjustments, color changes, spacing fixes

--- a/web/css/source/ata-main.less
+++ b/web/css/source/ata-main.less
@@ -6,20 +6,30 @@ a {
     color: black;    
 }
 
+.ata-navigation{
+    background-color: black;
+    color: white;
+    max-width: 100%;
+}
+
 .static-contemporary{
   height: 50%;
-  align: center;
+  max-height: 480px;
   padding: 0;
   margin: 0;
   background-color: #c3b29a;
 }
-/*
-.ata-col{
+
+.contemporary-menu{
     background-color: #ece7e9;    
 }
-*/
+
 .contemporary-text{
-   padding-top: 10px; 
+   padding-top: 36px;
+   font-size: 16px;
+   font-weight: 500;
+   text-align: center;
+   line-height: 1.2em;
 }
 
 .static-contemporary div {
@@ -27,18 +37,50 @@ a {
 }
 
 .static-contemporary h1 {
-    font-size: 26px;
+    font-size: 33px;
+    color: white;
+    text-decoration: underline;
+    font-weight: 800;
+    margin-bottom: 25%;
 }
 
 .static-contemporary h2{
-    font-size: 20px;    
+    font-size: 28px;
+    color: white;
+    margin-bottom: -0.5rem;
+    line-height: 1.5;
+}
+
+.static-contemporary hr{
+    background-color: white;    
 }
 
 .static-contemporary p{
-    font-size: 12px;
+    font-size: 18px;
+    padding: 0 10px 0 10px;
+    word-spacing: 1px;
+    word-wrap: normal;
+    line-height: 28px;
+    color: white;
+    font-weight: 600;
 }
 
 .static-contemporary img {
     height: 80%;
-    width: 100%;    
+    width: 95%;    
+}
+
+.stickyribbon .nav-sections .navigation {
+    background: #45555a;
+    color: #e2e5e5;
+    width: 115%;
+    margin-bottom: 0;
+}
+
+.stickyribbon .nav-sections .navigation span{
+    color: #e2e5e5;    
+}
+
+.page-title-wrapper{
+    display: inline;    
 }
